[package]
name = "random-wall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.2", features = ["http2", "json"] }
serde = "1.0.152"
